# botcode_ros2

./: readme.md
src/chapt2_2_pkg_py/: setup.py
src/chapt3_status_display/: CMakeLists.txt
src/chapt4_cpp_srv/: CMakeLists.txt  package.xml
src/chapt4_python_srv/: package.xml  setup.py
src/chapt6_rob_descrip/: CMakeLists.txt  package.xml
src/chapt6_rob_descrip/config/: fishbot_ros2_controller.yaml  rviz_robdisp.rviz
src/chapt6_rob_descrip/launch/: gazebo_sim.launch.py
src/chapt7_nav2_cpp/: CMakeLists.txt  package.xml
src/chapt7_nav2_cpp/config/: nav2_params.yaml
src/chapt7_nav2_cpp/launch/: navigation2.launch.py
src/chapt7_nav2_cpp/maps/: room.pgm
src/chapt7_nav2_cpp/src/: nav_single_point.cpp
src/chapt7_nav2_py/: package.xml  setup.cfg  setup.py
src/chapt7_nav2_py/chapt7_nav2_py/: patrol_node.py
src/chapt7_nav2_py/config/: patrol_config.yaml
src/chapt7_nav2_py/launch/: autopatrol.launch.py
src/chapt8_controllers/: CMakeLists.txt  chapt8_controllers.xml  package.xml
src/chapt8_controllers/include/chapt8_controllers/: base_controller.hpp  move_controller.hpp  spin_controller.hpp
src/chapt8_controllers/src/: move_controller.cpp  spin_controller.cpp  test_plugin.cpp
src/chapt8_custom_controller/: CMakeLists.txt  nav2_custom_controller_plugin.xml  package.xml
src/chapt8_custom_planner/: CMakeLists.txt  nav2_custom_planner_plugin.xml  package.xml
src/chapt8_custom_planner/src/: custom_planner.cpp
src/chapt9_fishbot_upboard/: CMakeLists.txt  package.xml
src/chapt9_pio_proj/: platformio.ini
src/chapt9_wifi2serial/: package.xml  setup.cfg  setup.py
(+30 files in other folders)
